--- a/main.css
+++ b/main.css
@@ -1,9 +1,39 @@
 body {
     background-color: blanchedalmond;
     font-family: Arial, Helvetica, sans-serif;
+    margin: -8px;
 }
 
-ul {
+.f-right {
+    float: right;
+}
+
+.f-left {
+    float: left;
+}
+
+.grid {
+    display: grid;
+    grid-template-rows: [row-1-inicio] 50px [row-2-inicio] 50px [row-3-final];
+    grid-template-columns: [col-1-inicio] 1fr [col-2-inicio] 1fr[col-3-medio] 1fr [col-4-final];
+}
+
+.grid-header {
+    margin: 0px;
+    display: grid;
+    width: 100%;
+    grid-template-rows: [row-1-inicio] 50px [row-2-final];
+    grid-template-columns: [col-1-inicio] 1fr [col-2-inicio] 1fr[col-3-medio] 1fr [col-4-final];
+    grid-column: col-1-inicio / col-4-final;
+    grid-row: row-1-inicio / row-2-inicio;
+}
+
+.bg-fixed {
+    position: fixed;
+    background-image: url(/IconsRedesSociales/icons8-facebook-150.png);
+}
+
+.grid-header ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -15,55 +45,46 @@ ul {
     background-color: #333;
 }
 
-li {
+.grid-header li {
     background-color: #333;
     float: left;
+    margin: 0px 20px;
+    padding: 0px 10px;
 }
 
-.f-right {
-    float: right;
-}
-
-.f-left {
-    float: left;
-}
-
-li a {
+.grid-header li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px;
+    padding: 15px 30px;
     text-decoration: none;
 }
 
-li a:hover {
+.grid-header li a:hover {
     background-color: rgba(0, 0, 0, 1);
 }
 
 .bg-green {
     background-color: #4caf50;
-
+    margin-left: 0px;
+    padding: 0px;
 }
 
-.content {
-    margin-top: 55px;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
+.bg-orange {
+    background-color: coral;
 }
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
+    top: -50px;
     background-color: rgba(248, 248, 255, 0.83);
-    min-width: 160px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
 
-
 .dropdown-btn {
+    position: relative;
+    top: -50px;
     background-color: #4caf50;
     color: white;
     padding: 14px;
@@ -71,6 +92,7 @@ li a:hover {
     font-size: 16px;
     border: none;
     cursor: pointer;
+
 }
 
 .dropdown-content a {
@@ -80,14 +102,14 @@ li a:hover {
     display: block;
 }
 
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
 .dropdown:hover .dropdown-btn {
     background-color: #3e8e41;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
 }
