--- a/main.css
+++ b/main.css
@@ -1,58 +1,41 @@
-*{
-    margin:0px;
-    padding:0px;   
+/* General */
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
+
 body {
     background-color: blanchedalmond;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.f-right {
-    float: right;
+/* HEADER */
+
+.header {
+    display: flex;
+    height: 3em;
 }
 
-.f-left {
-    float: left;
-}
-
-.grid {
-    display: grid;
-    grid-template-rows: [row-1-inicio] 50px [row-2-inicio] 50px [row-3-final];
-    grid-template-columns: [col-1-inicio] 1fr [col-2-inicio] 1fr[col-3-medio] 1fr [col-4-final];
-}
-
-.grid-header {
-    display: grid;
-    width: 100%;
-    grid-template-rows: [row-1-inicio] 50px [row-2-final];
-    grid-template-columns: [col-1-inicio] 1fr [col-2-inicio] 1fr[col-3-medio] 1fr [col-4-final];
-    grid-column: col-1-inicio / col-4-final;
-    grid-row: row-1-inicio / row-2-inicio;
-}
-
-.bg-fixed {
-    position: fixed;
-    background-image: url(/IconsRedesSociales/icons8-facebook-150.png);
-}
-
-.grid-header ul {
+.header ul {
     list-style-type: none;
     overflow: hidden;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #333;
+    background-color: #444;
 }
 
-.grid-header li {
-    background-color: #333;
+.header li {
+    background-color: #444;
     float: left;
+    overflow: hidden;
     margin: 0px 20px;
     padding: 0px 10px;
 }
 
-.grid-header li a {
+.header li a {
     display: block;
     color: white;
     text-align: center;
@@ -60,33 +43,58 @@ body {
     text-decoration: none;
 }
 
-.grid-header li a:hover {
+.header li a:hover {
     background-color: rgba(0, 0, 0, 1);
 }
 
-.bg-green {
-    background-color: #4caf50;
-    margin-left: 0px;
+/* PRIMER DIV */
+
+.fondo-inicio {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 400px;
+    background-image: url(http://placekitten.com/1600/400);
 }
 
-.bg-orange {
-    background-color: coral;
+/* CAJAS PRIMER DIV */
+
+.traslucid {
+    border-radius: 5px;
+    background-color: rgba(248, 248, 255, 0.33);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
+
+.box {
+    padding: 10px 15px;
+    margin: 10px 15px;
+    width: 14%;
+    text-align: center;
+    transition: 0.2s;
+}
+
+.box:hover {
+    scale: 1.05 1.05;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+p.titulo {
+    font-size: x-large;
+}
+
+/* Dropdown Redes Sociales*/
 
 .dropdown-content {
     display: none;
-    position: relative;
-    top: -50px;
     background-color: rgba(248, 248, 255, 0.83);
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
 
 .dropdown-btn {
-    position: relative;
-    top: -50px;
-    background-color: #4caf50;
+    background-color: #333;
     color: white;
-    padding: 14px;
+    padding: 12px;
     margin: -8px;
     font-size: 16px;
     border: none;
@@ -102,7 +110,7 @@ body {
 }
 
 .dropdown:hover .dropdown-btn {
-    background-color: #3e8e41;
+    background-color: black;
 }
 
 .dropdown:hover .dropdown-content {
@@ -111,4 +119,18 @@ body {
 
 .dropdown-content a:hover {
     background-color: #f1f1f1;
+}
+
+/* Propiedades varias */
+
+.f-left {
+    float: left;
+}
+
+.bg-green {
+    background-color: #4caf50;
+}
+
+.bg-orange {
+    background-color: coral;
 }
