--- a/main.css
+++ b/main.css
@@ -1,136 +1,17 @@
-/* General */
-
 * {
-    margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
-body {
-    background-color: blanchedalmond;
-    font-family: Arial, Helvetica, sans-serif;
+body,
+header,
+main,
+footer {
+    border: 3px purple solid;
+    min-height: 50px;
+    margin: 0.5rem;
 }
 
-/* HEADER */
-
-.header {
-    display: flex;
-    height: 3em;
-}
-
-.header ul {
-    list-style-type: none;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #444;
-}
-
-.header li {
-    background-color: #444;
-    float: left;
-    overflow: hidden;
-    margin: 0px 20px;
-    padding: 0px 10px;
-}
-
-.header li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 15px 30px;
-    text-decoration: none;
-}
-
-.header li a:hover {
-    background-color: rgba(0, 0, 0, 1);
-}
-
-/* PRIMER DIV */
-
-.fondo-inicio {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    height: 400px;
-    background-image: url(http://placekitten.com/1600/400);
-}
-
-/* CAJAS PRIMER DIV */
-
-.traslucid {
-    border-radius: 5px;
-    background-color: rgba(248, 248, 255, 0.33);
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-}
-
-.box {
-    padding: 10px 15px;
-    margin: 10px 15px;
-    width: 14%;
-    text-align: center;
-    transition: 0.2s;
-}
-
-.box:hover {
-    scale: 1.05 1.05;
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
-}
-
-p.titulo {
-    font-size: x-large;
-}
-
-/* Dropdown Redes Sociales*/
-
-.dropdown-content {
-    display: none;
-    background-color: rgba(248, 248, 255, 0.83);
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
-}
-
-.dropdown-btn {
-    background-color: #333;
-    color: white;
-    padding: 12px;
-    margin: -8px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown:hover .dropdown-btn {
-    background-color: black;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-/* Propiedades varias */
-
-.f-left {
-    float: left;
-}
-
-.bg-green {
-    background-color: #4caf50;
-}
-
-.bg-orange {
-    background-color: coral;
+main {
+    min-height: 100px;
 }
