--- a/main.css
+++ b/main.css
@@ -1,7 +1,13 @@
 * {
-    padding: 0px;
+    /*     padding: 0px; */
     box-sizing: border-box;
 }
+
+html {
+    font-size: 1rem;
+    height: 100%;
+}
+
 
 body,
 header,
@@ -13,55 +19,58 @@ footer {
     min-width: 400px;
 }
 
+body {
+    background-color: blanchedalmond;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 main {
     min-height: 200px;
 }
 
-/* HEADER */
-
-.header-menu {
-    display: flex;
-    height: 5%;
-    max-height: 13%;
+main>div {
+    border: 2px aquamarine solid;
+    min-height: 180px;
+    margin: 0.5rem;
 }
 
-.header-menu ul {
-    list-style-type: none;
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #444;
-}
-
-.header-menu li {
-    background-color: #444;
-    float: left;
-    max-width:25%;
-    overflow: hidden;
-    margin: 0px 20px;
-    padding: 0px 10px;
-}
-
-.header-menu li a {
-    display: inline-block;
-    width: 100%;
-    color: white;
-    text-align: center;
-    padding: 15px 30px;
-    text-decoration: none;
-}
-
-.header-menu li a:hover {
-    background-color: rgba(0, 0, 0, 1);
+main>aside {
+    border: 2px aquamarine solid;
+    min-height: 180px;
+    margin: 0.5rem;
 }
 
 .seccion {
-    border: 2px salmon solid;
+    border: 2px blueviolet solid;
     min-height: 50px;
     margin: 0.5rem;
 }
+
+.seccion article {
+    border: 2px blue solid;
+    margin: 0.5rem;
+    min-height: 20px;
+}
+
+.contenido-lat {
+
+    
+}
+
+
+/* HEADER */
+
+.header-menu {}
+
+.header-menu ul {}
+
+.header-menu li {}
+
+.header-menu li a {}
+
+.header-menu li a:hover {}
+
+
 
 .bg-green {
     background-color: darkolivegreen;
