--- a/main.css
+++ b/main.css
@@ -12,38 +12,39 @@ body,
 header,
 main,
 footer {
-    border: 3px purple solid;
+    /*     border: 3px purple solid; */
     min-height: 50px;
     margin: 0.5rem;
     min-width: 400px;
 }
 
 body {
-    background-color: blanchedalmond;
-    background-image: url(/Gatitos/gato-jugando-con-una-flor_3840x2160_xtrafondos.com.jpg);
     font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: blanchedalmond;
 }
 
 main {
-    background: rgb(255, 245, 229);
-    background: linear-gradient(167deg, rgba(255, 245, 229, 0.9668242296918768) 0%, rgba(255, 145, 19, 0.8008580141040791) 52%, rgba(236, 187, 132, 0.773546918767507) 100%, rgba(230, 96, 128, 1) 100%);
+    margin: 0 -8px;
     min-height: 200px;
     overflow: auto;
+    background: rgb(255, 245, 229);
+    background: linear-gradient(167deg, rgba(255, 245, 229, 0.9668242296918768) 0%, rgba(255, 145, 19, 0.8008580141040791) 52%, rgba(236, 187, 132, 0.773546918767507) 100%, rgba(230, 96, 128, 1) 100%);
+
 }
 
 /*Contenedor gral*/
 
 main>div {
-    border: 2px aquamarine solid;
+    /*    border: 2px aquamarine solid; */
     min-height: 180px;
-    margin: 0.5rem;
+    margin: 0rem;
     height: auto;
-    width: 65%;
+    width: 100%;
     float: left;
 }
 
 main>aside {
-    border: 2px aquamarine solid;
+    /* border: 2px aquamarine solid; */
     min-height: 180px;
     min-width: 30%;
     margin: 0.5rem;
@@ -52,22 +53,31 @@ main>aside {
 }
 
 .seccion {
-    border: 2px blueviolet solid;
+    /*    border: 2px blueviolet solid; */
     min-height: 50px;
     margin: 0.5rem;
 }
 
+.seccion70 {
+    /*    border: 2px blueviolet solid; */
+    min-height: 50px;
+    margin: 0.5rem;
+    width:70%;
+}
+.seccion30 {
+    /*    border: 2px blueviolet solid; */
+    min-height: 50px;
+    margin: 0.5rem;
+    width:25%;
+}
+
+
+
 .seccion article {
-    border: 2px blue solid;
+    /* border: 2px blue solid; */
     margin: 0.5rem;
     min-height: 20px;
 }
-
-#imgGrande {
-    width: 100%;
-}
-
-.contenido-div {}
 
 
 /* HEADER */
@@ -79,11 +89,11 @@ main>aside {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: #444;
+    background-color: #555;
 }
 
 .header-menu ul li {
-    
+
     background-color: #444;
     float: left;
     overflow: hidden;
@@ -92,6 +102,7 @@ main>aside {
     margin: 0px 20px;
     padding: 0px 10px;
     height: 50px;
+    background: transparent;
 }
 
 .header-menu ul li a {
@@ -115,6 +126,7 @@ main>aside {
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    min-height: 350px;
 }
 
 .traslucid {
@@ -136,10 +148,43 @@ main>aside {
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
-p.titulo {
-    font-size: x-large;
+/* Dropdown Redes Sociales*/
+
+.dropdown-content {
+    display: none;
+    background-color: rgba(248, 248, 255, 0.83);
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
 }
 
+.dropdown-btn {
+    background-color: #555;
+    color: white;
+    padding: 12px;
+    margin: -8px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-btn {
+    background-color: black;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
 
 /* VARIOS */
 
@@ -153,4 +198,8 @@ p.titulo {
 
 .f-rigth {
     float: right
+}
+
+.f-left {
+    float: left;
 }
