--- a/style.css
+++ b/style.css
@@ -184,6 +184,50 @@ header {
     background-color: blanchedalmond;
 }
 
+/* Carrousel */
+
+.contenedorCarrousel {
+
+    width: 100%;
+    position: relative;
+    height: 780px;
+
+
+}
+
+.boton {
+    font-size: 30px;
+    width: 70px;
+    height: 70px;
+    line-height: 70px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, .7);
+    text-align: center;
+    font-weight: bold;
+    position: absolute;
+    color: #fff;
+    box-shadow: 0 0 10px rgb(255, 255, 255, .6);
+    -webkit-transition: all .3% ease;
+    -o-transition: all .3% ease;
+    transition: all .3% ease;
+}
+
+.boton:hover {
+    cursor: pointer;
+    transform: scale(1.2, 1.2);
+}
+
+.atras {
+    left: 2%;
+    top: calc(50% - 70px);
+}
+
+.adelante {
+    right: 2%;
+    top: calc(50% - 70px);
+}
+
+
 /* VARIOS */
 
 .bg-green {
