--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ main {
 
 }
 
+footer {
+    min-height: 140px;
+}
+
 /*Contenedor gral*/
 
 main>div {
@@ -65,6 +69,14 @@ main>aside {
     min-height: 20px;
 }
 
+.tituloIntermedio {
+    display: flex;
+    justify-content: center;
+}
+
+.tituloIntermedio h1 {
+    margin: 16px;
+}
 
 /* HEADER */
 
@@ -142,26 +154,28 @@ header {
 /* Dropdown Redes Sociales*/
 
 .seccionDropDown {
-    min-height: 180px;
+    min-height: 100px;
     margin: 0.5rem;
     height: auto;
     width: auto;
     float: left;
+
 }
 
 .dropdown-content {
     display: none;
     background-color: blanchedalmond;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 40px;
 }
 
 .dropdown-btn {
     background-color: #4caf50;
     color: white;
     padding: 12px;
-    margin: -8px;
     font-size: 16px;
     border: none;
+    border-radius: 40px;
     cursor: pointer;
 }
 
@@ -170,6 +184,9 @@ header {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    align-self: center;
+    align-content: center;
+    align-items: center;
 }
 
 .dropdown:hover .dropdown-btn {
@@ -177,11 +194,7 @@ header {
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: blanchedalmond;
+    display: flex;
 }
 
 /* Carrousel */
@@ -231,7 +244,6 @@ header {
     right: 2%;
     top: calc(50% - 70px);
 }
-
 
 /* VARIOS */
 
