--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 html {
     font-size: 1rem;
     height: 100%;
-    background: linear-gradient(167deg, rgba(255, 245, 229, 0.9668242296918768) 0%, rgba(255, 145, 19, 0.8008580141040791) 52%, rgba(236, 187, 132, 0.773546918767507) 100%, rgba(230, 96, 128, 1) 100%);
+    background: linear-gradient(167deg, rgba(255, 245, 229, 0.9668242296918768) 0%, rgba(255, 145, 19, 0.8008580141040791) 52%, rgba(236, 187, 132, 0.773546918767507) 100%, rgba(230, 96, 128, 1) 100%) fixed;
 }
 
 
